--- a/app/src/main/res/layout/head_game_layout.xml
+++ b/app/src/main/res/layout/head_game_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/avatarImage"
@@ -27,7 +27,7 @@
     <GridView
         android:id="@+id/navigateGridView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="192dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="25dp"
@@ -39,7 +39,7 @@
         android:stretchMode="columnWidth"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:visibility="visible">
+        android:scrollbars="none">
     </GridView>
     
     <View
@@ -48,7 +48,7 @@
         android:layout_height="4dp"
         android:layout_below="@+id/navigateGridView"
         android:layout_marginTop="15dp"
-        android:background="#f5f5f5"/>
+        android:background="#dddddd"/>
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -143,6 +143,7 @@
                 android:textColor="#FFF"
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="8dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/new_game_watch_button"/>
 
         </LinearLayout>
@@ -210,6 +211,7 @@
                 android:textColor="#FFF"
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="8dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/new_game_watch_button"/>
 
         </LinearLayout>
@@ -277,6 +279,7 @@
                 android:textColor="#FFF"
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="8dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/new_game_watch_button"/>
 
         </LinearLayout>
@@ -285,7 +288,7 @@
             android:id="@+id/spinLine2"
             android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:background="#f5f5f5"/>
+            android:background="#dddddd"/>
 
     </LinearLayout>
 
@@ -306,7 +309,7 @@
     <HorizontalScrollView
         android:id="@+id/horizontalScollRec"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/newGameRecommendText"
         android:scrollbars="none"
         android:layout_marginTop="25dp"
@@ -328,7 +331,7 @@
         android:layout_height="4dp"
         android:layout_below="@+id/horizontalScollRec"
         android:layout_marginTop="15dp"
-        android:background="#f5f5f5"/>
+        android:background="#dddddd"/>
 
     <TextView
         android:id="@+id/rankingListText"
@@ -341,6 +344,7 @@
         android:layout_alignParentLeft="true"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
         android:layout_below="@+id/spinLine3"/>
 
 </RelativeLayout>
