--- a/app/src/main/res/layout/ranking_list_game_item.xml
+++ b/app/src/main/res/layout/ranking_list_game_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="20dp">
 
         <ImageView
@@ -75,7 +77,9 @@
 
     <View
         android:layout_marginTop="15dp"
-        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="1px"
         android:background="#dddddd"/>
 
