--- a/app/src/main/res/layout/head_game_layout.xml
+++ b/app/src/main/res/layout/head_game_layout.xml
@@ -27,7 +27,7 @@
 
     <GridView
         android:id="@+id/navigateGridView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_below="@+id/nickNameText"
         android:layout_height="192dp"
         android:layout_marginTop="25dp"
