--- a/app/src/main/res/drawable/more_game_down_btn.xml
+++ b/app/src/main/res/drawable/more_game_down_btn.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item android:state_pressed="true" android:drawable="@drawable/sogou_game_sdk_main_dialog_top_more_s" />
+    <item android:drawable="@drawable/sogou_game_sdk_main_dialog_top_more_n"/>
 </selector>
