--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colortextlinkNormal">#111111</color>
     <color name="colortextlinkPressed">#888888</color>
+    <color name="moretextlinkNoraml">#ff8a00</color>
+    <color name="moretextlinkPressed">#888888</color>
 
 </resources>
